public/style.css
:root {
  --main-background: #D4C4B4;
  --font-family: 'Poppins', sans-serif;
  --font-size-head: 3rem;
  --font-size-subhead: 1.8rem;
  --font-size-text: 1rem;

  --light-background-color: #E5E5E5;
  --light-font-color: #121825;

  --white: #f8f9fa;
  --gray01: #e9ecef;
  --gray02: #dee2e6;
  --gray03: #ced4da;
  --gray04: #adb5bd;
  --gray05: #6c757d;
  --gray06: #495057;
  --gray07: #343a40;
  --gray08: #212529;
}
.light {
  --bg-color: var(--white);
  --bg-main: var(--gray01);
  --text: var(--gray07);
  --border-color: var(--gray08);
}
.dark {
  --bg-color: var(--gray07);
  --bg-main: var(--gray06);
  --text: var(--gray03);
  --border-color: var(--gray06);
}
body {
  width: 100vw;
  height: 100vh;
  padding: 0;
  margin: 0;
}
.main {
  background-color: var(--bg-main);
  height: 100%;
  color: var(--light-font-color);
}
.display {
  border-radius: 20px;
  background-color: white;
  padding: 10px;
  box-shadow: 0 0 12px 6px rgba(0,0,0,0.05);
  border-radius: 0.5rem;
}
.main {
  width: 100vw;
  height: 100vh;
  margin-bottom: 2rem;
  display: grid;
  grid-template-columns: auto 1fr 1fr;
  grid-template-rows: auto auto 1fr; 
  grid-gap: 20px;
  grid-template-areas: 
  "search search search"
  "title current current"
  "forecast forecast forecast"
  ;
}

/* ----- SEARCH AREA ----- */
.container-nav {
  grid-area: search;
  height: fit-content;
}
.container-search {
  height: fit-content;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-left: 2rem;
}
.theme-toggle-container {
  margin-right: 40px;
}
.search-box {
  max-width: 400px;
  margin-right: 40px;
}
#searchField {
  background-color: var(--bg-main);
  color: var(--text);
  border: 1px solid var(--gray04);
}
#searchField:focus {
  background-color: var(--bg-main);
}
.recent-search-container {
  display: flex;
  flex-direction: row;
}
.recent-btn {
  margin-right: 0.5rem;
  margin-bottom: 0.5rem;
  color: red;
}
#clear-search {
  margin-left: 20px;
  height: fit-content;
}

/* ----- CURRENT WEATHER TITLE DISPLAY ----- */
.container-title {
  grid-area: title;
  margin-top: 0.5rem;
  margin-left: 6rem;
  padding: 1rem 2rem 1.5rem 2rem;
  font-family: var(--font-family);
  display: inline-block;
  background-color: var(--bg-color);
  color: var(--text);
}
.current-title-t {
  float: left;
  margin-top: 10px;
}
.cur-icon-t {
  float: right;
}
#cur-city-name-t {
  font-size: var(--font-size-head);
  font-weight: 600;
}
#cur-description-t {
  font-size: 1.5rem;
  margin-bottom: 10px;
}

/* ------ CURRENT WEATHER METRICS DISPLAY ------ */
.container-current {
  grid-area: current;
  margin-top: 0.5rem;
  margin-right: 6rem;
  padding: 2rem;
  font-size: var(--font-size-subhead);
  background-color: var(--bg-color);
  color: var(--text);
}
.current-weather-top {
  width: 100%;
  height: 50%;
  display: flex;
  flex-direction: row;
  text-align: center;
  margin-bottom: 10px;
}
.metric-display {
  float: left;
  width: 50%;
  height: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  font-family: var(--font-family);
}
.metric-number {
  font-size: var(--font-size-subhead);
  font-weight: 600;
}
.metric-heading {
  font-size: var(--font-size-text);
}
.current-weather-bottom {
  width: 100%;
  height: 50%;
  display: flex;
  flex-direction: row;
  text-align: center;
}
.metric-unit-lg {
  font-size: 1.5rem;
}
.metric-unit-sm {
  font-size: 1rem;
}

/* ------ FORECAST WEATHER DISPLAY ------ */
.container-forecast {
  grid-area: forecast;
  margin: 0 6rem auto 6rem;
  background-color: var(--bg-color);
  color: var(--text);
}
.input-group {
  max-width: 500px;
} 
#forecast-weather-t {
  padding: 0.5rem;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}
.forecast-day-t {
  font-family: var(--font-family);
  font-weight: 600;
  border: 1px solid var(--border-color);
  border-radius: 1em;
  width: 20rem;
  height: auto;
  margin: 10px;
  padding: 20px;
  text-align: center;
}
.fore-date-day-t {
  font-size: 1.5rem;
}
.fore-date-full-t {
  font-size: var(--font-size-text);
  font-weight: 200;
  font-style: italic;
}
.fore-temp-t {
  font-size: 1.3rem;
  font-weight: 600;
}
.fore-temp-desc-t {
  font-weight: 400;
}

@media (max-width: 1100px) {
  .main {
    height: 100vh;
  }
  .container-search {
    align-content: center;
  }
  .metric-number {
    font-size: 1.5rem;
  }
  .metric-heading {
    font-size: 0.9rem;
  }
  #forecast-weather-t {
    align-content: center;
    flex-wrap: wrap;
  }
}

@media (max-width: 970px) {
  .main {
    display: flex;
    flex-direction: column;
    height: auto;
    padding-top: 0;
    padding-bottom: 1rem;
  }
  .container-title {
    grid-area: title;
    margin-left: 6rem;
    margin-right: 6rem;
  }
  .current-title-t {
    margin-left: 4rem;
  }
  .cur-icon-t {
    margin-right: 3.75rem;
  }
  .container-current {
    grid-area: current;
    margin-top: 0;
    margin-left: 6rem;
  }
}

@media (max-width: 768px) {
  .display {
    margin-top: 0.8rem;
  }
  .theme-toggle-container {
    display: inline-block;
    width: 100%;
    margin-bottom: 0.5rem;
  }
  .btn-group-toggle, .active {
    visibility: visible;
  }
  .container-title {
    grid-area: title;
    margin-left: 2rem;
    margin-right: 2rem;
  }
  .current-title-t {
    margin-left: 2rem;
  }
  .cur-icon-t {
    margin-right: 2rem;
  }
  .container-current {
    grid-area: current;
    margin-left: 2rem;
    margin-right: 2rem;
  } 
  .container-forecast {
    margin-left: 2rem;
    margin-right: 2rem;
  }
}

@media (max-width: 576px) {
  .current-title-t {
    margin-left: 0;
  }
  .cur-icon-t img {
    display: none;
  }
  .container-current {
    padding: 2rem 1rem 2rem 1rem;
  } 
  .metric-unit-lg {
    font-size: 1.2rem;
  }
  .metric-unit-sm {
    font-size: 0.8rem;
  }
}

